trunk:
Better exception handling + the ability to auto json decode remote dispatches. #6997 @jers
Rewrote run.php. This SHOULD not break anything. Please... #7183 @jers
Added AS_BOOLEAN casting. #6978 @jers
AS_FILE casts will now behave as you would expect #7180 @jers
Added ->_redirect() method to FroodController. #6973 @jers
Breaking change, new tag is whinyantelope. The signature for FroodController::__construct() has changed. @jers
Added ->_forward() method to FroodController. #6973 @jers
Breaking change for custom output modes. @jers
Optimal local remoting! @jers
Added a doOutputDisabled() to FroodController. @jers
Added a doOutputJsonAutoUtf8() to FroodController. @jers
Added a _hasValue() function to FroodController. @jers
Moved the string conversion methods from Frood to FroodUtil. @jers
Refactored the autoloader to a seperate class. @jers
Renamed all exceptions. @jers
Refactored rendering to seperate classes. You will need to adapt any custom rendering modes! @jers
Template paths and names are now consistent with the urls used for the actions. @jers
This dependency fixes the redirect screen language bug and adds the xoops logger to non admin pages [r:xoops=20110809] @jers
Legacy support for the public app when remoting. @jers
Removed the old public and admin runners. @jers
Fixed array support for local Frood remoting. @jers
Major rewrite to support local and cron apps. @jers
ReFixed a bug in the autoloader. @jers
Fixed the autoloader so it skips hidden files and folders. @jers
First working, stable version. @jers